--- a/resources/css/franqueado.css
+++ b/resources/css/franqueado.css
@@ -1,5 +1,7 @@
+/* COMEÇA AQUI JULIANO-------------------------------------------------------------------- */
+
 * {
-    margin: 0;
+    margin: 0px;
     padding: 0px;
     font-size: 100%;
     box-sizing: border-box;
@@ -28,9 +30,9 @@ a:active {
 }
 
 header {
+    /* AVISAR JULIANO TIRAR O VH */
     background-color: #000;
     width: 100%;
-    min-width: 100vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -39,6 +41,15 @@ header {
     align-items: center;
     padding: 20px 20px;
     /* display: none; */
+}
+
+
+/*Avisar o JULIANO*/
+
+.topo {
+    background-color: #000;
+    height: 220px;
+    width: 100%;
 }
 
 header img {
@@ -86,6 +97,55 @@ nav .nav-menu {
     flex-direction: row;
 }
 
+.iconemenu {
+    font-size: 35px;
+    left: 35px;
+    top: 35px;
+    position: absolute;
+    display: none;
+    color: #fff;
+}
+
+#main-menu-checkbox {
+    position: absolute;
+    /* left: -100vw; */
+    z-index: 100;
+    left: 38px;
+    top: 38px;
+    width: 30px;
+    height: 30px;
+    opacity: 0;
+}
+
+.iconemenu {
+    cursor: pointer;
+}
+
+@media (max-width: 770px) {
+    header .nav-menu {
+        width: 100%;
+        display: block;
+    }
+    header {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+    header li {
+        padding: 10px 10px;
+    }
+    .menu a {
+        font-size: 20px;
+    }
+    .iconemenu {
+        display: block;
+    }
+    #main-menu-checkbox~header .nav-menu {
+        display: none;
+    }
+    #main-menu-checkbox:checked~header .nav-menu {
+        display: block;
+    }
+}
+
 @media (max-width: 14300px) {
     header {
         flex-direction: column;
@@ -122,6 +182,8 @@ nav .nav-menu {
     }
 }
 
+
+/*
 @media only screen and (max-width: 767px) {
     .menu a {
         font-size: 16px;
@@ -139,20 +201,34 @@ nav .nav-menu {
         font-size: 7px;
     }
 }
+*/
+
+
+/* COMEÇA AQUI JULIANO-------------------------------------------------------------------- */
+
+
+/* COMEÇA AQUI JULIANO-------------------------------------------------------------------- */
+
+
+/* COMEÇA AQUI JULIANO-------------------------------------------------------------------- */
+
+
+/* COMEÇA AQUI JULIANO-------------------------------------------------------------------- */
 
 .container-img {
-    margin-top: 220px;
+    /* margin-top: 220px;  AVISAR O JULIANO*/
+    /*border: red solid 1px;*/
     background-image: url(../img/franqueado/burgueHome.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
-    width: 100vh;
     display: flex;
     min-width: 100%;
     height: 720px;
     align-items: center;
     flex-direction: column;
     text-align: center;
+    background-position: center;
 }
 
 .container-img p {
@@ -165,21 +241,15 @@ nav .nav-menu {
         font-size: 45px;
     }
 }
-h1 {
-    color: #000;
-    font-size: 28px;
-    text-align: center;
-}
 
 .container-img-descricao {
     margin: 50px 0;
-    background-image: url(../img/franqueado/hamburger-meat-grill.jpg);
+    /*border: red solid 1px;*/
+    background-image: url("../img/franqueado/hamburger-meat-grill.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
     display: flex;
-    width: 100vh;
-    min-width: 100%;
     height: 620px;
     justify-content: center;
     align-items: center;
@@ -190,7 +260,6 @@ h1 {
 
 .container-img-descricao p {
     font-size: 30px;
-    width: 100vh;
     padding: 40px;
     margin: 0 10%;
     line-height: 45px;
@@ -237,8 +306,6 @@ h1 {
     background-image: url("../img/franqueado/front-view-hamburger-with-wooden-background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100vh;
-    min-width: 100%;
     color: #fff;
     display: flex;
     height: 720px;
@@ -265,137 +332,199 @@ h1 {
     padding-left: 15px;
 }
 
-.registroformulario {
-    width: 800px;
-    /* background-color: blue; */
-    margin: auto;
-    color: #000;
-    padding: 10px 0px 10px 0px;
-    text-align: center;
-    border-radius: 15px 15px 0px 0px;
-    /* box-shadow: inset 0 0 1em gold, 0 0 1em red; */
-}
-
-.registroformulario h1 {
-    font-size: 25px;
-}
-
-.container-formulario-conteudo {
-    display: flow-root;
-    min-width: 100vh;
-    align-self: center;
-}
-
-@media only screen and (max-width: 805px) {
-    .container-formulario-conteudo {
-        width: 80%;
-    }
-    .container-formulario-conteudo form label {
-        width: 100%;
-    }
-    .container-formulario-conteudo form input {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 805px) {
-    .registroformulario {
-        width: 100vh;
-        display: flex;
-        min-width: 100%;
-        justify-content: center;
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 805px) {
-    .container-formulario-conteudo #telefone .inputtelefone {
-        width: 100%;
-        margin: 0px;
-    }
-    .container-formulario-conteudo #telefone .inputDDD {
-        width: 25%;
-    }
-}
-
-form {
-    padding: 20px;
-}
-
-input[type=text] {
-    margin: 10px 0px;
+.wrapper{
+    max-width: 1200px;
     width: 100%;
-    display: inline-block;
-    box-sizing: border-box;
-    line-height: 50px;
-    border-radius: 6px;
-    color: #555555;
+    background-image: url(../img/home/promobackground.jpg);
+    object-fit: cover;
+    margin: 20px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
 }
 
-label {
-    width: 100%;
-    display: flex;
-    justify-content: end;
-    box-sizing: border-box;
+.wrapper .title {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 35px;
+    color: #fff;
     text-transform: uppercase;
-}
-
-#telefone {
-    display: inline-block;
-    width: 74%;
-    box-sizing: border-box;
-}
-
-#telefone .inputDDD {
-    width: 25%;
-}
-
-#telefone .inputtelefone {
-    width: 70%;
-    margin: 0px 0px 0 20px;
-}
-
-textarea {
-    margin: 10px 0px 10px 5px;
-    width: 100%;
-    display: inline-block;
-    box-sizing: border-box;
-    line-height: 50px;
-    border-radius: 6px;
-    font-size: 22px;
-    color: #555555;
-}
-
-#observacao label {
-    display: block;
-    float: left;
-    padding: 10px 0 0 0;
-}
-
-.botao {
-    background-color: #8257E6;
-    font-size: 26px;
-    height: 60px;
-    display: block;
     text-align: center;
-    border-radius: 10px;
-    border: 2px solid #266473;
-    padding: 15px;
+}
+
+.wrapper .form{
+    width: 100%;
+}
+
+.wrapper .form .input_field{
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.wrapper .form .input_field label{
+    width: 200px;
+    color: #fff;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.wrapper .form .input_field .input,
+.wrapper .form .input_field .textarea{
+    width: 100%;
     outline: none;
+    border:  1px solid #252025;
+    font-size: 18px;
+    padding: 8px 10px;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+}
+
+.wrapper .form .input_field .textarea{
+    resize: none;
+    height: 150px;
+
+}
+
+.wrapper .form .input_field .custom_select{
+    position: relative;
+    width: 100%;
+    height: 40px;
+}
+
+.wrapper .form .input_field .custom_select select{
+    -webkit-appearance: none ;
+    appearance: none;
+    border: 1px solid #252025;
+    width: 100%;
+    height: 100%;
+    padding: 8px 10px;
+    border-radius: 3px;
+    outline: none;
+}
+
+.wrapper .form .input_field .custom_select:before{
+    content: " ";
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    border: 8px solid;
+    border-color: #8257E6 transparent transparent transparent;
+    pointer-events: none;
+}
+
+.wrapper .form .input_field .input:focus,
+.wrapper .form .input_field .textarea:focus,
+.wrapper .form .input_field select:focus{
+    border: 1px solid #8257E6;
+}
+
+.wrapper .form .input_field p{
+    font-size: 18px;
+    color: #fff;
+}
+
+.wrapper .form .input_field .check{
+    width: 15px;
+    height: 15px;
+    position: relative;
+    display: block;
+    cursor: pointer;
+}
+
+.wrapper .form .input_field .check input[type="checkbox"]{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.wrapper .form .input_field .check .checkmark{
+    width: 15px;
+    height: 15px;
+    border: 1px solid #8257E6;
+    display: block;
+    position: relative;
+}
+
+.wrapper .form .input_field .check .checkmark:before{
+    content: " ";
+    position: absolute;
+    top: 1px;
+    left: 2px;
+    width: 5px;
+    height: 2px;
+    border: 2px solid;
+    border-color:transparent transparent #fff #fff;
+    transform: rotate(-45deg);
+    display: none;
+}
+
+.wrapper .form .input_field .check input[type="checkbox"]:checked ~ .checkmark{
+    background-color: #8257E6;
+    
+}
+.wrapper .form .input_field .check input[type="checkbox"]:checked ~ .checkmark:before{
+    display: block;
+
+}
+
+.wrapper .form .input_field .btn{
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 26px;
+    border: 0;
+    background: #8257E6;
     color: #fff;
     cursor: pointer;
-    transition: 0.25s;
+    border-radius: 3px;
+    outline: none;
 }
 
-/* footer */
+.wrapper .form .input_field:last-child{
+    margin-bottom: 0;
 
+}
+.wrapper .form .input_field .btn:hover{
+    background: #422b79;
+}
+
+@media (max-width: 820px){
+    .wrapper .form .input_field{
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    .wrapper .form .input_field label {
+        margin-bottom: 5px;
+    }
+    .wrapper .form .input_field.terms{
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 460px){
+    .wrapper .form .input_field{
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    .wrapper .form .input_field label {
+        margin-bottom: 5px;
+    }
+    .wrapper .form .input_field.terms{
+        flex-direction: row;
+    }
+}
+
+
+/* footer */
 footer {
     background-color: #000;
     padding: 20px;
     width: 100%;
     padding-top: 20px;
     padding-bottom: 40px;
-    font-size: 2.4rem;
+    font-size: 26px;
 }
 
 .footer-nav {
@@ -436,7 +565,7 @@ footer {
 
 .social-links li a:link,
 .social-links li a:visited {
-    font-size: 2.0rem;
+    font-size: 24px;
 }
 
 .logo-facebook,
@@ -466,20 +595,45 @@ footer .footer-paragrafo {
     color: #fff;
     text-align: center;
     margin-top: 60px;
-    font-size: 1.4rem;
+    font-size: 16px;
 }
 
 .promo-footer {
-    width: 100vh;
-    min-width: 100%;
+    width: 100%;
+    min-width: 360px;
 }
 
-@media only screen and (max-width: 800px) and (max-width: 600px) {
+.copy{
+    font-size: 24px;
+}
+
+/* @media only screen and (max-width: 862px) and (max-width: 1116px){
     footer {
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        width: 820px;
+        min-width: 306px;
     }
-    footer p {
-        margin-bottom: 0px;
-        font-size: 1.2rem;
+    
+}
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    footer {
+       display: block;
+    }
+    
+} */
+@media (max-width: 460px){
+    .promo-footer{
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    footer {
+        margin-bottom: 5px;
+    }
+    .social-links{
+        flex-direction: row;
     }
 }
