--- a/resources/css/reservas.css
+++ b/resources/css/reservas.css
@@ -1,12 +1,13 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+    margin: 0px;
+    padding: 0px;
     font-size: 100%;
     box-sizing: border-box;
     font-family: 'Modern Antiqua', cursive;
 }
 
-nav, ul{
+nav,
+ul {
     list-style: none;
 }
 
@@ -19,96 +20,167 @@ a {
     padding: 2px 6px;
 }
 
-.container-promo{
-    width: 800px;
-    min-width: 100%;
-    max-width: 100%;
-}
-
-
 a:hover,
 a:active {
     opacity: 1;
-    color: #8257E6; 
-    border-bottom: 4px solid #8257E6; 
+    color: #8257E6;
+    border-bottom: 4px solid #8257E6;
 }
-
-/* Header */
 
 header {
     background-color: #000;
     width: 100%;
-    max-width: 1200px;
-    min-width: 306px;
-    top:0;
+    position: absolute;
+    top: 0;
     left: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 20px 20px;
 }
-header img{
-    width: 200px;
-    
+
+
+.topo {
+    background-color: #000;
+    height: 200px;
+    width: 820px;
+    min-width: 360px;
+    max-width: 1200px;
 }
-header nav{
+
+header img {
+    width: 200px;
+}
+
+header nav {
     display: flex;
 }
-header li a{
+
+header li a {
     color: #fff;
-    font-size: 16px;
-    
+    font-size: 1.6rem;
 }
 
-header li{
-    margin: 0 40px;
+header li {
+    padding: 30px 10px;
 }
 
-header li:first-child{
+header li:first-child {
     margin-left: 0;
 }
-header li:last-child{
+
+header li:last-child {
     margin-right: 0;
 }
-header .menu{
+
+header .menu {
     display: flex;
     flex-grow: 1;
 }
-header .nav-menu{
+
+header .nav-menu {
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-around;
 }
 
-header .item-nav{
-    margin: 20px;
+header .item-nav {
+    margin: 0 auto;
 }
 
-@media only screen and (max-width: 862px) and (max-width: 1116px){
+nav .nav-menu {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.iconemenu {
+    font-size: 35px;
+    left: 35px;
+    top: 35px;
+    position: absolute;
+    display: none;
+    color: #fff;
+}
+
+#main-menu-checkbox {
+    position: absolute;
+    /* left: -100vw; */
+    z-index: 100;
+    left: 38px;
+    top: 38px;
+    width: 30px;
+    height: 30px;
+    opacity: 0;
+}
+
+.iconemenu {
+    cursor: pointer;
+}
+
+@media (max-width: 770px) {
+    header .nav-menu {
+        width: 100%;
+        display: block;
+    }
     header {
-        flex-direction: row;
-        width: 820px;
-        min-width: 306px;
-        justify-content: start;
-        align-items: baseline;
-       
+        background-color: rgba(0, 0, 0, 0.7);
+        width: 850px;
+    }
+    header li {
+        padding: 10px 10px;
+    }
+    .menu a {
+        font-size: 20px;
+    }
+    .iconemenu {
+        display: block;
+    }
+    #main-menu-checkbox~header .nav-menu {
+        display: none;
+    }
+    #main-menu-checkbox:checked~header .nav-menu {
+        display: block;
     }
 }
 
-@media only screen and (max-width: 632px) and (max-width: 416px){
+@media (max-width: 14300px) {
     header {
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
+        flex-direction: column;
+    }
+    header img {
+        margin-bottom: 10px;
+    }
+    header .item-nav {
+        font-size: 16px;
     }
 }
 
-@media only screen and (max-width: 521px) and (max-width: 306px){
-    header {
-        flex-direction: row;
-        justify-content: start;
-        align-items: baseline;
+@media only screen and (max-width: 1410px) and (max-width: 1255px) {
+    .menu a {
+        font-size: 18px;
     }
+}
+
+@media only screen and (max-width: 1250x) and (max-width: 1000px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 789px) {
+    .menu a {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .menu a {
+        font-size: 14px;
+    }
+}
+.container-promo{
+    width: 100%;
+    margin-top: 250px;
 }
 
 h1 {
@@ -151,7 +223,7 @@ h1 {
     letter-spacing: 1px;
 }
 .reserva-h1{
-    color: #000;
+    color: #fff;
 }
 
 h2 {
@@ -166,10 +238,17 @@ section {
 }
 
 .section-reservas{
-    text-align: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/home/promobackground.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff; 
+    background-attachment: fixed;
+    height: 750px;
 }
 .descripition{
-    word-spacing: 4px;
+    word-spacing: 6px;
+    text-align: center;
+    font-size: 24px;
 }
 
 .reserva-h2{
@@ -244,7 +323,7 @@ cite img {
     }
     section{
         padding: 40px 0;
-        min-width: 820px;
+        min-width: 860px;
     }
 
     .row,
@@ -266,8 +345,8 @@ cite img {
 }
 @media only screen and (max-width: 550px){
     .section-testimonials{
-        width: 820px;
-        height: 700px;
+        width: 850px;
+        height: 650px;
     }
     .col{
         width: 100%;
@@ -278,7 +357,293 @@ cite img {
 }
 
 
+/* Formulário section */
 
+.wrapper{
+    max-width: 800px;
+    width: 800px;
+    background-color: #fff;
+    margin: 20px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+}
 
+.wrapper .title {
+    font-size: 34px;
+    font-weight: 700;
+    margin-bottom: 35px;
+    color: #000;
+    text-transform: uppercase;
+    text-align: center;
+}
 
+.wrapper .form{
+    width: 100%;
+}
 
+.wrapper .form .input_field{
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.wrapper .form .input_field label{
+    width: 200px;
+    color: #757575;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.wrapper .form .input_field .input,
+.wrapper .form .input_field .textarea{
+    width: 100%;
+    outline: none;
+    border:  1px solid #252025;
+    font-size: 18px;
+    padding: 8px 10px;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+}
+
+.wrapper .form .input_field .textarea{
+    resize: none;
+    height: 150px;
+
+}
+
+.wrapper .form .input_field .custom_select{
+    position: relative;
+    width: 100%;
+    height: 40px;
+}
+
+.wrapper .form .input_field .custom_select select{
+    -webkit-appearance: none ;
+    appearance: none;
+    border: 1px solid #252025;
+    width: 100%;
+    height: 100%;
+    padding: 8px 10px;
+    border-radius: 3px;
+    outline: none;
+}
+
+.wrapper .form .input_field .custom_select:before{
+    content: " ";
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    border: 8px solid;
+    border-color: #8257E6 transparent transparent transparent;
+    pointer-events: none;
+}
+
+.wrapper .form .input_field .input:focus,
+.wrapper .form .input_field .textarea:focus,
+.wrapper .form .input_field select:focus{
+    border: 1px solid #8257E6;
+}
+
+.wrapper .form .input_field p{
+    font-size: 14px;
+    color: #757575;
+}
+
+.wrapper .form .input_field .check{
+    width: 15px;
+    height: 15px;
+    position: relative;
+    display: block;
+    cursor: pointer;
+}
+
+.wrapper .form .input_field .check input[type="checkbox"]{
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.wrapper .form .input_field .check .checkmark{
+    width: 15px;
+    height: 15px;
+    border: 1px solid #8257E6;
+    display: block;
+    position: relative;
+}
+
+.wrapper .form .input_field .check .checkmark:before{
+    content: " ";
+    position: absolute;
+    top: 1px;
+    left: 2px;
+    width: 5px;
+    height: 2px;
+    border: 2px solid;
+    border-color:transparent transparent #fff #fff;
+    transform: rotate(-45deg);
+    display: none;
+}
+
+.wrapper .form .input_field .check input[type="checkbox"]:checked ~ .checkmark{
+    background-color: #8257E6;
+    
+}
+.wrapper .form .input_field .check input[type="checkbox"]:checked ~ .checkmark:before{
+    display: block;
+
+}
+
+.wrapper .form .input_field .btn{
+    width: 100%;
+    padding: 8px 10px;
+    font-size: 26px;
+    border: 0;
+    background: #8257E6;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 3px;
+    outline: none;
+}
+
+.wrapper .form .input_field:last-child{
+    margin-bottom: 0;
+
+}
+.wrapper .form .input_field .btn:hover{
+    background: #422b79;
+}
+
+@media (max-width: 820px){
+    .wrapper .form .input_field{
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    .wrapper .form .input_field label {
+        margin-bottom: 5px;
+    }
+    .wrapper .form .input_field.terms{
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 460px){
+    .wrapper .form .input_field{
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    .wrapper .form .input_field label {
+        margin-bottom: 5px;
+    }
+    .wrapper .form .input_field.terms{
+        flex-direction: row;
+    }
+}
+/* footer */
+footer {
+    background-color: #000;
+    padding: 20px;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    font-size: 26px;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #fff;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #8257E6;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 24px;
+}
+
+.logo-facebook,
+.logo-googleplus,
+.logo-twitter,
+.logo-instagram {
+    transition: color 0.2s;
+}
+
+.logo-facebook:hover {
+    color: #3b5998;
+}
+
+.logo-twitter:hover {
+    color: #00aced;
+}
+
+.logo-googleplus:hover {
+    color: #dd4b39;
+}
+
+.logo-instagram:hover {
+    color: #517fa4;
+}
+
+footer .footer-paragrafo {
+    color: #fff;
+    text-align: center;
+    margin-top: 60px;
+    font-size: 16px;
+}
+
+.promo-footer {
+    width: 100%;
+    max-width: 1100px;
+    min-width: 360px;
+}
+
+@media only screen and (max-width: 1116px) and (max-width: 862px){
+    footer {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        width: 860px;
+        min-width: 306px;
+    }
+}   
+
+@media only screen and (max-width: 632px) and (max-width: 416px){
+    footer {
+        flex-direction: row;
+        justify-content: start;
+        align-items: baseline;
+        width: 860px;
+        min-width: 306px;
+    }
+}
